# rust-wasm-photo-tool

./: .gitignore  .gitleaks.toml  Architecture.md  COMPILER-VIOLATIONS.md  Cargo.toml  ImageHorse-v2.1-Changes.md  LICENSE  README.md  Rust-React-cleanup-refactor.md  Rust-change.md  SIMD_PLAN.md  Saturday-possibly-good-updates.md  bench.html  eslint.config.compiler.mjs  eslint.config.mjs  futures-settings.md  netlify.toml  package.json  playwright.config.ts  playwright.sw.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  roll_repo_for_ai.sh  vercel.json
.cargo/: config.toml
.convex/: auth.config.ts  projects.ts  schema.ts  textHistory.ts  userProfiles.ts  users.ts
.convex/_generated/: api.d.ts
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: 2026-04-22-035149-please-fix-this-vite-v641-building-for-producti.txt  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
app/src/: App.tsx  ArchitectureDiagram.tsx  index.css  main.tsx  styles.css  vite-env.d.ts
app/src/app/: App.tsx  AppShell.tsx  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts
app/src/components/: AIUsagePane.tsx  AppearancePane.tsx  BrandRevealScreen.tsx  CanvasArea.tsx  CanvasLoader.tsx  CanvasResize.tsx  CelebrationDialog.tsx  ColorSwatchGrid.tsx  ConvexClerkProvider.tsx  DevTestsPane.tsx  DevTierDialog.tsx  DiagnosticLogOverlay.tsx  DimensionFields.tsx  ExportPane.tsx  GeneralPane.tsx  HistoryPanel.tsx  IdleOverlay.tsx  IdleScreen.tsx  IdleScreenDialog.tsx  ImageMetaPanel.tsx  LayersCanvasPane.tsx  MagnifierOverlay.tsx  MediaTile.tsx  PhotoStrip.tsx  PlacementGrid.tsx  ResourceMonitor.tsx  ResumeDialog.tsx  RulersGridsPane.tsx  SecurityPane.tsx  ShareButton.tsx  ShareViewer.tsx  ShortcutModal.tsx  SizeSlider.tsx  SmallDialog.tsx  SmallWindowNotice.tsx  StatusBar.tsx  StoragePane.tsx  SubscriptionButton.tsx  SuperUserPane.tsx  TabGroup.tsx  (+4 more)
app/src/hooks/: Stamp tool.d  UseBlurTool.ts  Useblurtool.ts  stamp_tool.d.ts  useAIJob.ts  (+24 more)
benches/: blur_threads.rs  patchmatch_nnf.rs  tiles.rs
convex/: ai.ts  aiJobs.ts  annotations.ts  auth.ts  crons.ts  history.ts  http.ts  images.ts  layers.ts  photoEdits.ts  projects.ts  schema.ts  shares.ts  stripe.ts  subscriptions.ts  testReplicate.ts  users.ts
convex/_generated/: api.d.ts
docs/: Architecture-Roadmap.md  Architecture.md  CI-Guardrails.md  Change-summary.md  Engine-Roadmap.md  Features.md  File-Map.md  Getting-Started.md  GitHub-Actions.md  IndexedDB-Investigation.md  Keyboard-Shortcuts.md  LANGUAGE-TIER-ROADMAP.md  OpenRaster-Export-Import.md  Refactor-Playbook.md  Security-Hardening.md  Service-Workers-Caching.md  State-Management.md  Tool-Arc-Plan.md
docs/adr/: 000-template.md  001-originals-lazy-migration-to-dexie.md  002-tool-module-registry.md  003-operation-log-undo.md  004-tile-buffer.md  005-codec-worker-fallback.md  006-render-cache-disposable.md  007-overnight-worktree-runs.md  008-svg-rasterized-at-import.md  009-coop-coep-clerk-spike.md  010-metadata-scrub-privacy-modes.md  011-parallel-kernels-rayon-threads.md  012-oplog-document-model.md  013-oplog-undo-hash-fallback.md  014-magnetic-lasso-smart-brush-cost-map.md  015-hash-routing-palette-nav.md  016-canvas-is-document-metadata.md  017-tiles-compiled-into-shipped-wasm.md  018-patchmatch-object-removal-scalar-day-1.md  019-opt-in-precache-service-worker.md  020-react-compiler-rules-adopted-per-rule.md  021-select-is-a-first-class-tool.md  INDEX.md
e2e/: no-sw-default.spec.ts  oplog-canvas-restore.spec.ts  smoke.spec.ts
e2e/sw/: sw-lifecycle.spec.ts
marketing/: .gitignore  architecture.html  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
marketing-two/: architecture.js  cmdk.js  commits.js  features-page.js  features.js  home.js  index.html  nav.js  pricing.js  releases.js  styles.css  system-architecture.mermaid  tokens.css  trail.js
marketing-two/.hallmark/: log.json
marketing-two/architecture/: index.html
marketing-two/features/: index.html
marketing-two/pricing/: index.html
marketing-two/trail-log/: index.html
marketing/scripts/: gen-trail-data.mjs
marketing/src/: App.tsx  config.ts  main.tsx  styles.css  tokens.css
rolled_repo/: ai_context_1.txt
scripts/: check.sh
scripts/db-snapshot/: README.md
src/: annotations.rs  codec.rs  core.rs  drawing.rs  edges.rs  effects.rs  filters.rs  history.rs  layer.rs  lib.rs  livewire.rs  ops.rs  ops_engine_parity.rs  paint.rs  patchmatch.rs  selection.rs  settings.rs  stamp.rs  text.rs  tiles.rs  transform.rs  utils.rs
src/simd/: blur.rs  color.rs  mod.rs  pixel.rs  resize.rs
tests/: copy_region_composited.rs  magic_eraser_cold_cache.rs  magic_eraser_mask_coverage.rs  replay_determinism.rs  replay_parity.rs  replay_stubs.rs  selection_boolean.rs  selection_history.rs  selection_marquee.rs  selection_preview.rs  selection_to_new_layer.rs  text_box_shadow.rs
tests/fixtures/: mod.rs
tests/support/: mod.rs
www-dist/: index.html
www-dist/assets/: index-B-SY8RXW.js  index-B3K9JCZd.js  index-B3ZgrHLv.css  index-BGtbbhk_.css  index-BK0WuUQz.js  index-BTe_0cZr.css  index-BYM_DdZg.js  index-BZZll5Zl.js  index-B_xs2VnS.js  index-Bm9DtO1d.js  index-Bq-opje-.css  index-BsFLQUeT.css  index-BsvyF0xW.js  index-Bu6kQXQa.js  index-BuLD4stF.js  index-C0wgF1Ds.js  index-C2dviSin.css  index-C56jHKLF.css  index-C7no2p8I.css  index-C8UMZ45y.js  index-C8ZusFC2.js  index-CA6Wv1Fv.js  index-CJzapGHw.css  index-CKiT-BuY.js  index-CQH161nD.js  index-CRvXlWyO.js  index-CWycxErS.js  index-CdXuNLi5.js  index-CoMc7CLd.js  index-CovxMFv7.js  index-CpzbHPea.js  index-CtKs4-vo.js  index-Cu58yGjg.js  index-CwMBZi8G.js  index-D-TPvrcM.js  index-D2pz6PLk.css  index-DMUBEU3y.js  index-DUoIMME8.css  index-DWcZDg_O.js  index-DaNUdsPn.js  (+61 more)
zustand/app/: AppShell.tsx
zustand/hooks/: useDrawingTools.ts  useEffectiveTool.ts  useImageActions.ts  usePaintTool.ts  usePhotoLoader.ts  useTextTool.ts
zustand/lib/: validation.ts
zustand/stores/: useAnnotationStore.ts  useToolStore.ts
(+184 files in other folders)
