[package]
name = "stamp_tool"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Tile engine core + operation log. Still off for a bare `cargo build`, but the
# SHIPPED WASM IS BUILT WITH IT ON — `build:wasm` passes `-- --features tiles`
# (ADR-017). It pulls in serde + postcard for the op-log codec.
#
# It used to say "NOT compiled into the wasm build — the default build must stay
# byte-for-byte unchanged", and that was true and quietly fatal: the op-log code
# was absent from the binary users ran, so `ih_oplog_undo` / `ih_tiles_flush` /
# `ih_oplog_persist` gated JS calls into engine functions that did not exist.
# Everything fell back to snapshot undo, silently. Found 2026-07-13 by checking
# the shipped binary for `oplog` symbols and getting zero. Do not restore the old
# behaviour without also deleting the flags it strands.
tiles = ["dep:serde", "dep:postcard"]

# Rayon-parallel kernels (blur first — see src/simd/blur.rs). OFF by default
# and NOT compiled into the default wasm build; the default build must stay
# byte-for-byte unchanged (verified each session — see SESSION_LOG.md on
# feat/rayon-parallel-blur). Compiles and runs TODAY on native (std threads,
# no special toolchain needed) — that's what `cargo test --features threads`
# and `cargo bench --features threads` exercise. A real wasm32 build additionally
# needs a nightly toolchain + `-Z build-std=panic_abort,std` with
# `-C target-feature=+atomics,+bulk-memory,+mutable-globals`, AND
# `Cross-Origin-Opener-Policy`/`Cross-Origin-Embedder-Policy` response headers
# for `SharedArrayBuffer` (spiked clean in ADR-009) — none of that is wired by
# this feature; it's the plumbing those later, separate decisions build on.
threads = ["dep:wasm-bindgen-rayon", "dep:rayon"]

# Scalar PatchMatch nearest-neighbor-field inpainting core (object removal,
# day 1 — see docs/adr). OFF by default and NOT compiled into the shipped
# wasm build; `build:wasm` (`--features tiles`) is unaffected, so the default
# build must stay byte-for-byte unchanged with this feature off. No new Cargo
# dependency: src/patchmatch.rs carries its own tiny SplitMix64 PRNG instead
# of pulling in `rand` (which would drag `getrandom` and its wasm32 JS-shim
# plumbing along for a 7x7 scalar patch search that has no real need for a
# general-purpose RNG crate). Runtime kill switch on the JS side:
# `ih_patchmatch` localStorage flag, same pattern as `ih_tiles_flush` /
# `ih_smart_edge`.
patchmatch = []

[dependencies]
wasm-bindgen = "0.2.108"
png = "0.17"
ab_glyph = "0.2"
# Routes Rust panics to console.error with a readable message + stack instead of
# the opaque "unreachable executed" RuntimeError. Installed once on module init
# (see `start` in lib.rs).
console_error_panic_hook = "0.1"

# Op-log serialization — only compiled when the `tiles` feature is enabled.
serde = { version = "1", features = ["derive"], optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }

# Parallel kernels — only compiled when the `threads` feature is enabled (see
# the feature comment above). `wasm-bindgen-rayon` supplies the `initThreadPool`
# wasm-bindgen export the wasm32+atomics build needs to spin up its Web Worker
# thread pool; it's a plain dependency on native (no special toolchain), which
# is what lets `cargo build --features threads` compile here today without one.
rayon = { version = "1.12", optional = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "tiles"
harness = false
required-features = ["tiles"]

# Scalar vs. rayon-parallel blur, native target (OS threads — see the doc
# comment at the top of benches/blur_threads.rs for what this can and can't
# tell us about the real wasm32 SIMD+threads path).
[[bench]]
name = "blur_threads"
harness = false
required-features = ["threads"]

# Replay-parity integration tests (tests/*.rs). Feature-gated the same way as
# the bench above: they use stamp_tool::ops/tiles directly, which only exist
# behind `tiles`. Plain `cargo test` skips these targets entirely (no compile
# attempt); `cargo test --features tiles` runs them for real — that's what CI
# does (see .github/workflows/ci.yml).
[[test]]
name = "replay_parity"
required-features = ["tiles"]

[[test]]
name = "replay_determinism"
required-features = ["tiles"]

[[test]]
name = "replay_stubs"
required-features = ["tiles"]

# Release tuning for the WASM build. wasm-pack builds in release by default;
# LTO + a single codegen unit let the optimizer inline across modules (pairs
# with SIMD in .cargo/config.toml). Slower to compile, faster at runtime.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
